# icloud-biff

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  PROTOCOL.md  README.md  default.nix  flake.nix  module.nix  shell.nix
.github/workflows/: cachix.yml  ci.yml  nix.yml
nix/: module.nix  sources.json
src/: email.rs  fetch.rs  html.rs  lib.rs  main.rs  types.rs  utils.rs
