[package]
name = "icloud-biff"
version = "1.0.0"
authors = ["Simon Chatterjee <code@chatts.net>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.1"      # process command line
derivative = "2.1"         # derive Default
derive_more = "0.99"       # derive Display
lettre = "0.9"             # send email
lettre_email = "0.9"       # construct email
horrorshow = "0.8"         # render HTML
mime = "0.3"               # MIME stuff
quoted_printable = "0.4"   # quoted-printable encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"         # JSON encoding/decoding
smol = "1.2"               # Minimal async runtime
surf = "1.0"               # HTTP client
