[package]
name = "icloud-biff"
version = "1.0.0"
authors = ["Simon Chatterjee <code@chatts.net>"]
edition = "2018"

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
derivative = "2"           # derive Default
derive_more = "0.99"       # derive Display
lettre = "0.9"             # send email
lettre_email = "0.9"       # construct email
horrorshow = "0.8"         # render HTML
mime = "0.3"               # MIME stuff
quoted_printable = "0.4"   # quoted-printable encoding
serde = { version = "1", features = ["derive"] }
serde_json = "1"           # JSON encoding/decoding
smol = "1"                 # Minimal async runtime
surf = "2"                 # HTTP client
